4/16/24 - Hatt
=======================================================================================================================
 - Re-opened Git repository to allow other users to help.
 - Over the course of time between the last note and this one, I have added a lot of stuff and fixed a lot of bugs, the datapack is waaaaaaay different now than what it was before.
=======================================================================================================================

1/1/24 - 2/19/24 - Hatt
=======================================================================================================================
- Completed all of the spells with the exception of the grand spells.
- Many things have been updated.
- The datapack is now on version 0.1.0 Beta
=======================================================================================================================

11/24/2023 - Hatt
=======================================================================================================================
- started work on overheat spell. Turned it into a beam spell so we have an example of it. This is basically going to be a flame thrower.
=======================================================================================================================

11/21/2023 - Hatt
=======================================================================================================================
- Worked out the mana cost for all of the spells
=======================================================================================================================

11/12/2023 - Hatt
=======================================================================================================================
- Updated the book unlockes to be more readable as the spell unlocks are.
- Started working on unlock scripts for all of the spells
- Completed all of the unlock scripts for books and spells