@@ -229,6 +229,7 @@
       "cobbled_deepslate_wall",
       "#logs",
       "#planks",
+      "moss",
       "#coal_ores"
     ]
   }
