@@ -230,6 +230,7 @@
       "cobbled_deepslate_wall",
       "#logs",
       "#planks",
+      "moss",
       "#coal_ores"
     ]
   }
