@@ -231,6 +231,7 @@
       "cobbled_deepslate_wall",
       "#logs",
       "#planks",
+      "moss",
       "#coal_ores"
     ]
   }
