@@ -9,6 +9,16 @@
           "functions": [
             {
               "function": "minecraft:set_nbt",
+              "tag": "{RepairCost:100,CustomModelData:538,display:{Name:'[{\"text\":\"Faded Manuscript\",\"italic\":false,\"color\":\"gold\"}]',Lore:['[{\"text\":\"An ancient Manuscript with faded\",\"italic\":false}]','[{\"text\":\"text and images on it...\",\"italic\":false}]','[{\"text\":\"Working out what it says will\",\"italic\":false}]','[{\"text\":\"probably take some time.\",\"italic\":false}]']}}"
+            }
+          ]
+        },
+        {
+          "type": "minecraft:item",
+          "name": "minecraft:stick",
+          "functions": [
+            {
+              "function": "minecraft:set_nbt",
               "tag": "{CustomModelData:518,display:{Name:'[{\"text\":\"Ancient Key\",\"italic\":false,\"color\":\"gold\"}]',Lore:['[{\"text\":\"This looks like an old key.\",\"italic\":false,\"color\":\"light_purple\"}]','[{\"text\":\"This could probably be restored.\",\"italic\":false,\"color\":\"light_purple\"}]']}}"
             }
           ]
@@ -19,7 +29,7 @@
           "functions": [
             {
               "function": "minecraft:set_nbt",
-              "tag": "MAnuscript1 xxxxxxxxxxxxxxxxxxxxx"
+              "tag": "{RepairCost:100,CustomModelData:535,display:{Name:'[{\"text\":\"Faded Manuscript\",\"italic\":false,\"color\":\"gold\"}]',Lore:['[{\"text\":\"An ancient Manuscript with faded\",\"italic\":false}]','[{\"text\":\"text and images on it...\",\"italic\":false}]','[{\"text\":\"Working out what it says will\",\"italic\":false}]','[{\"text\":\"probably take some time.\",\"italic\":false}]']}}"
             }
           ]
         },
@@ -29,7 +39,7 @@
           "functions": [
             {
               "function": "minecraft:set_nbt",
-              "tag": "Manuscript 2xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+              "tag": "{RepairCost:100,CustomModelData:536,display:{Name:'[{\"text\":\"Faded Manuscript\",\"italic\":false,\"color\":\"gold\"}]',Lore:['[{\"text\":\"An ancient Manuscript with faded\",\"italic\":false}]','[{\"text\":\"text and images on it...\",\"italic\":false}]','[{\"text\":\"Working out what it says will\",\"italic\":false}]','[{\"text\":\"probably take some time.\",\"italic\":false}]']}}"
             }
           ]
         },
@@ -39,7 +49,7 @@
           "functions": [
             {
               "function": "minecraft:set_nbt",
-              "tag": "Manuscript3xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+              "tag": "{RepairCost:100,CustomModelData:537,display:{Name:'[{\"text\":\"Faded Manuscript\",\"italic\":false,\"color\":\"gold\"}]',Lore:['[{\"text\":\"An ancient Manuscript with faded\",\"italic\":false}]','[{\"text\":\"text and images on it...\",\"italic\":false}]','[{\"text\":\"Working out what it says will\",\"italic\":false}]','[{\"text\":\"probably take some time.\",\"italic\":false}]']}}"
             }
           ]
         },
@@ -269,7 +279,7 @@
           "functions": [
             {
               "function": "minecraft:set_nbt",
-              "tag": "Katana xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+              "tag": "{RepairCost:100,CustomModelData:53,AttributeModifiers:[{AttributeName:\"generic.attack_damage\",Amount:17,Slot:mainhand,Name:\"generic.attack_damage\",UUID:[I;-124316,6594,211410,-13188]},{AttributeName:\"generic.attack_speed\",Amount:1.1,Slot:mainhand,Name:\"generic.attack_speed\",UUID:[I;-124316,6694,211410,-13388]}],display:{Name:'[{\"text\":\"Katana\",\"italic\":false}]',Lore:['[{\"text\":\"The blade on this Katana seems\",\"italic\":false}]','[{\"text\":\"to give a slight glow. Without\",\"italic\":false}]','[{\"text\":\"the needed materials to fix it,\",\"italic\":false}]','[{\"text\":\"you won\\'t be able to repair it.\",\"italic\":false}]']},Enchantments:[{id:sweeping,lvl:3}]}"
             }
           ]
         },
